SUBDIRS  = foo

TESTS = apt.rb \
	bdbdbm.rb \
	cmdapp-app.rb \
	cmdapp-search.rb \
	command.sh \
	config.rb \
	content.rb \
	dbm.rb \
	deindexer.rb \
	delta.rb \
	easyscanner.rb \
	extractor.rb \
	fetcher.rb \
	gettext.rb \
	importer.rb \
	indexer.rb \
	info.rb \
	monitor.rb \
	langscan.rb \
	license.rb \
	logger.rb \
	searcher.rb \
	searchquery.rb \
	searchresult.rb \
	texttokenizer.rb \
	updater.rb \
	util.rb \
	vcs.rb \
	webapp-markup.rb \
	webapp-xmlformatter.rb

EXTRA_DIST = $(TESTS) test-util.rb
